--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,16 @@
             <artifactId>javax.persistence</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.10</version>
+        </dependency>
+        <dependency>
+            <groupId>de.jensd</groupId>
+            <artifactId>fontawesomefx-fontawesome</artifactId>
+            <version>4.7.0-9.1.2</version>
+        </dependency>
 
     </dependencies>
 
